design : 모든 화면 기본 UI 구성 완료
- 배너 콘텐츠 UI 구성
- 상품 콘텐츠 UI 구성
- 추천 코디 콘텐츠 UI 구성
- 헤더, 푸터 UI 구성

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,8 @@
                 android:layout_height="wrap_content"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:title="@string/appbar_title"
-                app:titleCentered="true" />
+                app:titleCentered="true"
+                app:titleTextAppearance="@style/HeadLine5" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
