--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey01">#CC6E6962</color>
+    <color name="grey02">#F3F3F3</color>
+    <color name="grey03">#666666</color>
+    <color name="blue">#3663D0</color>
+    <color name="red">#FF0000</color>
 </resources>
