--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="RoundedCorners">
+        <item name="cornerSize">20dp</item>
+    </style>
+
     <style name="HeadLine5" parent="TextAppearance.MaterialComponents.Headline5" />
 
     <style name="HeadLine5.White">
@@ -17,16 +21,32 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="HeadLine6.Grey03">
+        <item name="android:textColor">@color/grey03</item>
+    </style>
+
+    <style name="HeadLine6.Red">
+        <item name="android:textColor">@color/red</item>
+    </style>
+
     <style name="Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1" />
 
     <style name="Subtitle1.White">
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="Subtitle1.Grey03">
+        <item name="android:textColor">@color/grey03</item>
+    </style>
+
     <style name="Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2" />
 
     <style name="Subtitle2.White">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Subtitle2.Grey03">
+        <item name="android:textColor">@color/grey03</item>
     </style>
 
     <style name="Caption" parent="TextAppearance.MaterialComponents.Caption" />
