feat : 통신을 통해 받은 데이터를 View 에 바인딩 작업 진행
- 라이브 데이터를 활용하여 데이터가 들어오면 View에 바인딩되도록 구현
- RecyclerView와 ViewPager2 를 중첩시켜 자연스런 스크롤 구현
- BindingAdapter를 활용하여 요구 사항에 맞게 각각 타입에 따른 데이터를 RecyclerView 에 바인딩
- Glide 를 활용하여 이미지 로드

--- a/app/src/main/res/layout/item_content.xml
+++ b/app/src/main/res/layout/item_content.xml
@@ -3,16 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+       <variable
+           name="contentType"
+           type="String" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_banner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
