--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -1,69 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/iv_banner_thumbnail"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/description_banner_image"
-        tools:srcCompat="@tools:sample/avatars" />
+    <data>
 
-    <TextView
-        android:id="@+id/tv_banner_keyword"
-        style="@style/Subtitle2.White"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintStart_toStartOf="@+id/iv_banner_thumbnail"
-        app:layout_constraintTop_toTopOf="@id/iv_banner_thumbnail"
-        tools:text="Showcase" />
+        <variable
+            name="banner"
+            type="com.example.musinsatest.data.dto.Banner" />
+    </data>
 
-    <TextView
-        android:id="@+id/tv_banner_title"
-        style="@style/HeadLine5.White.Bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_banner_description"
-        app:layout_constraintStart_toStartOf="@+id/tv_banner_keyword"
-        tools:text="쿠어 21 S/S\n신상품 한정 발매" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_banner_description"
-        style="@style/Subtitle2.White"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_banner_thumbnail"
-        app:layout_constraintStart_toStartOf="@+id/tv_banner_title"
-        tools:text="신상품 증정 이벤트" />
+        <ImageView
+            android:id="@+id/iv_banner_thumbnail"
+            loadImageUrl="@{banner.thumbnailURL}"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@string/description_banner_image"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/tv_banner_tap_index"
-        style="@style/Subtitle2.White"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/background_grey_r24"
-        android:gravity="center"
-        android:includeFontPadding="false"
-        android:paddingStart="10dp"
-        app:drawableEndCompat="@drawable/ic_chevron_right_white"
-        app:layout_constraintBottom_toBottomOf="@id/iv_banner_thumbnail"
-        app:layout_constraintEnd_toEndOf="@id/iv_banner_thumbnail"
-        tools:text="1 / 20" />
+        <TextView
+            android:id="@+id/tv_banner_keyword"
+            style="@style/Subtitle2.White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="50dp"
+            android:text="@{banner.keyword}"
+            app:layout_constraintStart_toStartOf="@+id/iv_banner_thumbnail"
+            app:layout_constraintTop_toTopOf="@id/iv_banner_thumbnail"
+            tools:text="Showcase" />
+
+        <TextView
+            android:id="@+id/tv_banner_title"
+            style="@style/HeadLine5.White.Bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:text="@{banner.title}"
+            app:layout_constraintBottom_toTopOf="@+id/tv_banner_description"
+            app:layout_constraintStart_toStartOf="@+id/tv_banner_keyword"
+            tools:text="쿠어 21 S/S\n신상품 한정 발매" />
+
+        <TextView
+            android:id="@+id/tv_banner_description"
+            style="@style/Subtitle2.White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="20dp"
+            android:text="@{banner.description}"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_banner_thumbnail"
+            app:layout_constraintStart_toStartOf="@+id/tv_banner_title"
+            tools:text="신상품 증정 이벤트" />
+
+        <TextView
+            android:id="@+id/tv_banner_tap_index"
+            style="@style/Subtitle2.White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="25dp"
+            android:background="@drawable/background_grey_r24"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:paddingStart="10dp"
+            app:drawableEndCompat="@drawable/ic_chevron_right_white"
+            app:layout_constraintBottom_toBottomOf="@id/iv_banner_thumbnail"
+            app:layout_constraintEnd_toEndOf="@id/iv_banner_thumbnail"
+            tools:text="1 / 20" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
