--- a/app/src/main/res/layout/item_footer.xml
+++ b/app/src/main/res/layout/item_footer.xml
@@ -1,22 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_footer_title"
-        style="@style/HeadLine6.Grey03"
-        android:layout_width="wrap_content"
+    <data>
+
+        <variable
+            name="footer"
+            type="com.example.musinsatest.data.dto.Footer" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        isFooterVisible="@{footer}"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_white_r50"
-        android:gravity="center"
-        app:icon="@drawable/ic_chevron_right_white"
-        app:iconTint="@color/grey03"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="새로운 추천" />
+        android:layout_marginVertical="5dp"
+        android:paddingVertical="5dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btn_footer_refresh"
+            style="@style/Subtitle2.Grey03"
+            isFooterMoreVisible="@{footer}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_white_r50"
+            android:gravity="center"
+            android:text="@{footer.title}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="새로운 추천" />
+
+        <Button
+            android:id="@+id/btn_footer_more"
+            style="@style/Subtitle2.Grey03"
+            isFooterRefreshVisible="@{footer}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_white_r50"
+            android:gravity="center"
+            android:text="@{footer.title}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="더보기" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
