--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -1,66 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/iv_goods_image"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/description_goods_image"
-        android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="102:120"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars[2]" />
+    <data>
 
-    <TextView
-        android:id="@+id/tv_goods_brand"
-        style="@style/HeadLine6.Grey03"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_goods_image"
-        tools:text="캐치볼" />
+        <variable
+            name="goods"
+            type="com.example.musinsatest.data.dto.Good" />
 
-    <TextView
-        android:id="@+id/tv_goods_price"
-        style="@style/HeadLine6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_goods_brand"
-        tools:text="395,800원" />
+    </data>
 
-    <TextView
-        android:id="@+id/tv_goods_sale_rate"
-        style="@style/HeadLine6.Red"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_goods_price"
-        app:layout_constraintStart_toEndOf="@id/tv_goods_price"
-        app:layout_constraintTop_toTopOf="@id/tv_goods_price"
-        tools:text="20%" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_goods_coupon"
-        style="@style/Subtitle1.White"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/background_blue_r6"
-        android:paddingHorizontal="7dp"
-        android:paddingVertical="5dp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_goods_price"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_goods_price"
-        tools:text="쿠폰" />
+        <ImageView
+            android:id="@+id/iv_goods_image"
+            loadImageUrl="@{goods.thumbnailURL}"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@string/description_goods_image"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="102:120"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars[2]" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_goods_brand"
+            style="@style/HeadLine6.Grey03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@{goods.brandName}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_goods_image"
+            tools:text="캐치볼" />
+
+        <TextView
+            android:id="@+id/tv_goods_price"
+            style="@style/HeadLine6"
+            updatePrice="@{goods.price}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_goods_brand"
+            tools:text="395,800원" />
+
+        <TextView
+            android:id="@+id/tv_goods_sale_rate"
+            style="@style/HeadLine6.Red"
+            updateSaleRate="@{goods.saleRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_goods_price"
+            app:layout_constraintStart_toEndOf="@id/tv_goods_price"
+            app:layout_constraintTop_toTopOf="@id/tv_goods_price"
+            tools:text="20%" />
+
+        <TextView
+            android:id="@+id/tv_goods_coupon"
+            style="@style/Subtitle1.White"
+            isCouponVisible="@{goods.hasCoupon}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/background_blue_r6"
+            android:paddingHorizontal="7dp"
+            android:paddingVertical="5dp"
+            android:text="@string/goods_coupon"
+            app:layout_constraintBottom_toBottomOf="@id/tv_goods_price"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_goods_price"
+            tools:text="쿠폰" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
