feat : 데이터에 맞게 Ui 수정 작업
- 필요없는 코드 삭제
- 넣은 데이터에 맞게 Ui 재구성
- Glide 활용하여 Icon 이미지 로드

--- a/app/src/main/res/layout/item_content.xml
+++ b/app/src/main/res/layout/item_content.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-       <variable
-           name="contentType"
-           type="String" />
+
+        <variable
+            name="contentType"
+            type="String" />
 
     </data>
 
@@ -15,19 +16,22 @@
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_banner"
+            isViewPagerVisible="@{contentType}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_content"
+            isRecyclerViewVisible="@{contentType}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:nestedScrollingEnabled="true"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
