--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -13,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="2dp">
 
         <ImageView
             android:id="@+id/iv_goods_image"
@@ -30,7 +31,7 @@
 
         <TextView
             android:id="@+id/tv_goods_brand"
-            style="@style/HeadLine6.Grey03"
+            style="@style/Subtitle1.Grey03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -41,7 +42,7 @@
 
         <TextView
             android:id="@+id/tv_goods_price"
-            style="@style/HeadLine6"
+            style="@style/Subtitle2"
             updatePrice="@{goods.price}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,11 +54,11 @@
 
         <TextView
             android:id="@+id/tv_goods_sale_rate"
-            style="@style/HeadLine6.Red"
-            updateSaleRate="@{goods.saleRate"
+            style="@style/Subtitle2.Red"
+            updateSaleRate="@{goods.saleRate}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             app:layout_constraintBottom_toBottomOf="@id/tv_goods_price"
             app:layout_constraintStart_toEndOf="@id/tv_goods_price"
             app:layout_constraintTop_toTopOf="@id/tv_goods_price"
@@ -65,12 +66,13 @@
 
         <TextView
             android:id="@+id/tv_goods_coupon"
-            style="@style/Subtitle1.White"
+            style="@style/Overline.White"
             isCouponVisible="@{goods.hasCoupon}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/background_blue_r6"
+            android:includeFontPadding="false"
             android:paddingHorizontal="7dp"
             android:paddingVertical="5dp"
             android:text="@string/goods_coupon"
