--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -9,39 +9,29 @@
             name="header"
             type="com.example.musinsatest.data.dto.Header" />
 
+        <import type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         isHeaderVisible="@{header}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
         android:paddingBottom="10dp">
-
-        <ImageView
-            android:id="@+id/iv_header_icon"
-            loadImageUrl="@{header.iconURL}"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="5dp"
-            android:contentDescription="@string/description_header_image"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="@id/tv_header_title"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@+id/tv_header_title"
-            app:layout_constraintTop_toTopOf="@id/tv_header_title"
-            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tv_header_title"
             style="@style/HeadLine6"
+            loadIconImageUrl="@{header.iconURL}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
+            android:drawablePadding="3dp"
+            android:ellipsize="end"
             android:gravity="center"
-            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:paddingHorizontal="30dp"
             android:text="@{header.title}"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_header_total_link"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="타이틀" />
@@ -52,10 +42,11 @@
             isHeaderTotalVisible="@{header}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:text="@string/header_total_link"
             app:drawableEndCompat="@drawable/ic_chevron_right_white"
             app:drawableTint="@color/grey03"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_header_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_header_title"
             tools:text="전체" />
