--- a/app/src/main/res/layout/item_style.xml
+++ b/app/src/main/res/layout/item_style.xml
@@ -20,6 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:contentDescription="@string/description_style_image"
+            android:padding="2dp"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
