--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="HeadLine5.Grey03">
+        <item name="android:textColor">@color/grey03</item>
+    </style>
+
     <style name="HeadLine5.White.Bold">
         <item name="android:textStyle">bold</item>
     </style>
@@ -49,10 +53,22 @@
         <item name="android:textColor">@color/grey03</item>
     </style>
 
+    <style name="Subtitle2.Red">
+        <item name="android:textColor">@color/red</item>
+    </style>
+
     <style name="Caption" parent="TextAppearance.MaterialComponents.Caption" />
 
     <style name="Caption.White">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Caption.Red">
+        <item name="android:textColor">@color/red</item>
+    </style>
+
+    <style name="Caption.Bold">
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="Overline" parent="TextAppearance.MaterialComponents.Overline" />
