feat : 클릭 이벤트 추가
- 클릭하면 주어진 url 로 이동하는 이벤트 리스너 생성 및 각 아이템에 할당
- ViewPager 에 pageChanged 이벤트 리스너를 할당하여 현재 page 인덱스 보여주기 구현

--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_banner"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -62,22 +63,6 @@
             app:layout_constraintStart_toStartOf="@+id/tv_banner_title"
             tools:text="신상품 증정 이벤트" />
 
-        <TextView
-            android:id="@+id/tv_banner_tap_index"
-            style="@style/Subtitle2.White"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="25dp"
-            android:background="@drawable/background_grey_r24"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:paddingStart="10dp"
-            app:drawableEndCompat="@drawable/ic_chevron_right_white"
-            app:layout_constraintBottom_toBottomOf="@id/iv_banner_thumbnail"
-            app:layout_constraintEnd_toEndOf="@id/iv_banner_thumbnail"
-            tools:text="1 / 20" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
