--- a/app/src/main/res/layout/item_style.xml
+++ b/app/src/main/res/layout/item_style.xml
@@ -12,6 +12,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
